--- a/Angular/src/app/header/header.component.html
+++ b/Angular/src/app/header/header.component.html
@@ -13,7 +13,7 @@
         </h4>
     </div>
     <div class="navbar-collapse collapse navbar-brand mx-auto">
-        <img src="/assets/images/logo.png" class="w-100" alt="">
+        <img src="./assets/images/logo.png" class="w-100" alt="">
     </div>
     <div class="navbar-collapse collapse w-100 collapse-items">
         <ul class="navbar-nav ml-auto">
