--- a/Angular/src/app/header/header.component.html
+++ b/Angular/src/app/header/header.component.html
@@ -3,25 +3,25 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="navbar-collapse collapse mr-auto w-100">
-        <h4 class="nav-item text-purple w-100">
-            Herolo Weather Task
+        <h4 class="nav-item text-main w-100">
+            What's The Weather
         </h4>
     </div>
     <div class="d-md-none mx-auto">
-        <h4 class="nav-item text-purple w-100">
-            Herolo Weather Task
+        <h4 class="nav-item text-main w-100">
+            What's The Weather
         </h4>
     </div>
     <div class="navbar-collapse collapse navbar-brand mx-auto">
-        <img src="./assets/images/logo.png" class="w-100" alt="">
+        <img src="./assets/images/logo.jpg" alt="">
     </div>
     <div class="navbar-collapse collapse w-100 collapse-items">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link text-purple font-weight-bold" routerLink="/home">Home</a>
+                <a class="nav-link text-main font-weight-bold" routerLink="/home">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-purple font-weight-bold" routerLink="/favorites">Favorites</a>
+                <a class="nav-link text-main font-weight-bold" routerLink="/favorites">Favorites</a>
             </li>
         </ul>
     </div>
