--- a/Angular/src/app/app.component.html
+++ b/Angular/src/app/app.component.html
@@ -1,9 +1,9 @@
 <header>
-    <herolo-header></herolo-header>
+    <wtw-header></wtw-header>
 </header>
 <main>
     <router-outlet></router-outlet>
 </main>
 <div class="error-container" *ngIf="errorMessage.length > 0">
-    <herolo-error-message-model (isClose)='errorMessage = ""' [message]="errorMessage"></herolo-error-message-model>
+    <wtw-error-message-model (isClose)='errorMessage = ""' [messages]="errorMessage"></wtw-error-message-model>
 </div>
