--- a/Angular/src/app/error-message-model/error-message-model.component.html
+++ b/Angular/src/app/error-message-model/error-message-model.component.html
@@ -8,7 +8,11 @@
                 </button>
             </div>
             <div class="modal-body">
-                {{message}}
+                <ul>
+                    <li *ngFor="let message of messages">
+                        {{message}}
+                    </li>
+                </ul>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" (click)="close()" data-dismiss="modal">Close</button>
