--- a/Angular/src/app/weather/current-weather/current-weather.component.css
+++ b/Angular/src/app/weather/current-weather/current-weather.component.css
@@ -1,35 +1,37 @@
 #currentWeatherWrapper {
-    position:relative;
-    width: 100%;
-    height:auto;
-    margin: auto;
-    text-align:center;
+    position: relative;
+    text-align: center;
 }
 
-h1{
-    font-size: 1.8vw;
+h1 {
+    font-size: 3vw;
 }
 
-img{
+img {
     width: 100%;
 }
-.content{
+
+.content {
     position: absolute;
     margin: auto;
-    top: 0;
-    left:0;
-    right:0;
-    bottom:0;
-    height:20%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
-p{
+
+p {
     padding: 1px;
     margin: 0;
-    font-size: 1.7vw;
+    font-size: 4vw;
     font-weight: 600;
 }
+
 @media screen and (min-width: 768px) {
     p {
-        font-size: 1.2vw;
+        font-size: 3vw;
+    }
+
+    h1 {
+        font-size: 2.5vw;
     }
 }
