--- a/Angular/src/app/weather/add-to-favorites/add-to-favorites.component.html
+++ b/Angular/src/app/weather/add-to-favorites/add-to-favorites.component.html
@@ -1,4 +1,4 @@
 <div class="favorites-container">
-    <button (click)="buttonClicked.emit()" class="bg-main">Favorites</button>
+    <button (click)="buttonClicked()" class="bg-main">Favorites</button>
     <img [src]="getFavoriteIcon()" alt="">
 </div>
