--- a/Angular/src/app/weather/location-search/location-search.component.html
+++ b/Angular/src/app/weather/location-search/location-search.component.html
@@ -1,8 +1,8 @@
-<div class="search-container" (mouseover)="showResults = true" (mouseleave)="showResults = false">
-    <wtw-search-form *ngIf="newSearch" class="mx-auto"
-        [searchInput]="newSearch" (search)=search.emit($event)>
+<div class="search-container" (focusin)="hideResults(false)" (focusout)="hideResults(true)">
+    <wtw-search-form class="mx-auto"
+        [searchInput]="results?.searchQuery" (search)=search.emit($event)>
     </wtw-search-form>
-    <wtw-search-results *ngIf="showResults && results" 
+    <wtw-search-results *ngIf="!isHide && results" 
         (selectedResult)="selectResult($event)" [results]="results.results">
     </wtw-search-results>
 </div>
